# n01d-machine

./: Cargo.toml  README.md  build.sh  config.json  n01d  n01d-gui  n01d-machine.desktop  run-nullsec-vm.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: INSTALL.md
docs/wiki/: Home.md
releases/n01d-cross-platform/public/: index.html
releases/n01d-cross-platform/src-tauri/: Cargo.toml  tauri.conf.json
releases/n01d-cross-platform/src-tauri/src/: main.rs  security.rs
src/: main.rs
src/gui/: mod.rs
src/network/: mod.rs
src/sandbox/: mod.rs
src/vm/: mod.rs
